k8/authservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authservice
  name: authservice
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
    nodePort: 31000
  selector:
    app: authservice
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authservice
  name: authservice
spec:
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "9000"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
        - name: SPRING_RABBITMQ_PASSWORD
          value: guest
        - name: SPRING_RABBITMQ_PORT
          value: "5672"
        - name: SPRING_RABBITMQ_USERNAME
          value: guest
        image: jigsheth57/authservice:latest
        name: authservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 9000
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /manage/health
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 15
