k8/configserver-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: configserver
  name: configserver
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
    nodePort: 30888
  selector:
    app: configserver
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configserver
  name: configserver
spec:
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
      - env:
        - name: PORT
          value: "8888"
        - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
          value: https://github.com/jigsheth57/config-repo
        - name: SPRING_PROFILES_ACTIVE
          value: local
        image: jigsheth57/configserver:latest
        name: configserver
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 8888
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /manage/health
            port: 8888
          initialDelaySeconds: 120
          periodSeconds: 15
