k8/contactservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: contactservice
  name: contactservice
spec:
  ports:
  - name: "9002"
    port: 9002
    targetPort: 9002
    nodePort: 31002
  selector:
    app: contactservice
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: contactservice
  name: contactservice
spec:
  selector:
    matchLabels:
      app: contactservice
  template:
    metadata:
      labels:
        app: contactservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "9002"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
        - name: SPRING_RABBITMQ_PASSWORD
          value: guest
        - name: SPRING_RABBITMQ_PORT
          value: "5672"
        - name: SPRING_RABBITMQ_USERNAME
          value: guest
        image: jigsheth57/contactservice:latest
        name: contactservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9002
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 9002
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9002
          initialDelaySeconds: 120
          periodSeconds: 15
