k8/discovery-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discovery
  name: discovery
spec:
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
    nodePort: 30761
  selector:
    app: discovery
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discovery
  name: discovery
spec:
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
      - env:
        - name: PORT
          value: "8761"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        image: jigsheth57/eurekaserver:latest
        name: discovery
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 8761
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8761
          initialDelaySeconds: 120
          periodSeconds: 15
