k8/gatewayservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gatewayservice
  name: gatewayservice
spec:
  ports:
  - name: "9012"
    port: 9012
    targetPort: 9012
    nodePort: 31012
  selector:
    app: gatewayservice
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gatewayservice
  name: gatewayservice
spec:
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "9012"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
        - name: SPRING_RABBITMQ_PASSWORD
          value: guest
        - name: SPRING_RABBITMQ_PORT
          value: "5672"
        - name: SPRING_RABBITMQ_USERNAME
          value: guest
        image: jigsheth57/gatewayservice:latest
        name: gatewayservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9012
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 9012
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9012
          initialDelaySeconds: 120
          periodSeconds: 15
