k8/hystrixdashboard-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hystrixdashboard
  name: hystrixdashboard
spec:
  ports:
  - name: "7979"
    port: 7979
    targetPort: 7979
    nodePort: 31079
  selector:
    app: hystrixdashboard
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hystrixdashboard
  name: hystrixdashboard
spec:
  selector:
    matchLabels:
      app: hystrixdashboard
  template:
    metadata:
      labels:
        app: hystrixdashboard
    spec:
      containers:
      - env:
        - name: PORT
          value: "7979"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
        - name: SPRING_RABBITMQ_PASSWORD
          value: guest
        - name: SPRING_RABBITMQ_PORT
          value: "5672"
        - name: SPRING_RABBITMQ_USERNAME
          value: guest
        image: jigsheth57/hystrixdashboard:latest
        name: hystrixdashboard
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7979
        readinessProbe:
          tcpSocket:
            port: 7979
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 7979
          initialDelaySeconds: 120
          periodSeconds: 15
