k8/opportunityservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opportunityservice
  name: opportunityservice
spec:
  ports:
  - name: "9003"
    port: 9003
    targetPort: 9003
    nodePort: 31003
  selector:
    app: opportunityservice
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opportunityservice
  name: opportunityservice
spec:
  selector:
    matchLabels:
      app: opportunityservice
  template:
    metadata:
      labels:
        app: opportunityservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "9003"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
        - name: SPRING_RABBITMQ_PASSWORD
          value: guest
        - name: SPRING_RABBITMQ_PORT
          value: "5672"
        - name: SPRING_RABBITMQ_USERNAME
          value: guest
        image: jigsheth57/opportunityservice:latest
        name: opportunityservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9003
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 9003
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /manage/health
            port: 9003
          initialDelaySeconds: 120
          periodSeconds: 15
