k8/rabbitmq-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: "15671"
    port: 15671
    targetPort: 15671
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "5672"
    port: 5672
    targetPort: 5672
    nodePort: 30672
  - name: "4369"
    port: 4369
    targetPort: 4369
  - name: "5671"
    port: 5671
    targetPort: 5671
  - name: "25672"
    port: 25672
    targetPort: 25672
  selector:
    app: rabbitmq
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-management
        name: rabbitmq
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 15671
        - containerPort: 15672
        - containerPort: 5672
        - containerPort: 4369
        - containerPort: 5671
        - containerPort: 25672
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 120
          periodSeconds: 15
