k8/sfdcwebapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sfdcwebapp
  name: sfdcwebapp
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
    nodePort: 31090
  selector:
    app: sfdcwebapp
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sfdcwebapp
  name: sfdcwebapp
spec:
  selector:
    matchLabels:
      app: sfdcwebapp
  template:
    metadata:
      labels:
        app: sfdcwebapp
    spec:
      containers:
      - env:
        - name: PORT
          value: "9090"
        - name: SPRING_PROFILES_ACTIVE
          value: local
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
        - name: SPRING_RABBITMQ_PASSWORD
          value: guest
        - name: SPRING_RABBITMQ_PORT
          value: "5672"
        - name: SPRING_RABBITMQ_USERNAME
          value: guest
        image: jigsheth57/sfdcwebapp:latest
        name: sfdcwebapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 9090
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /manage/health
            port: 9090
          initialDelaySeconds: 120
          periodSeconds: 15
