k8/turbine-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: turbine
  name: turbine
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
    nodePort: 32000
  selector:
    app: turbine
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: turbine
  name: turbine
spec:
  selector:
    matchLabels:
      app: turbine
  template:
    metadata:
      labels:
        app: turbine
    spec:
      containers:
      - env:
        - name: PORT
          value: "8000"
        - name: TURBINE_STREAMS
          value: "http://accountservice:9001/manage/hystrix.stream http://contactservice:9002/manage/hystrix.stream
            http://opportunityservice:9003/manage/hystrix.stream http://gatewayservice:9012/manage/hystrix.stream"
        image: jigsheth57/turbine:latest
        name: turbine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 15
