k8/zipkin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  ports:
  - name: "9411"
    port: 9411
    targetPort: 9411
    nodePort: 30411
  selector:
    app: zipkin
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          value: mysql
        - name: RABBIT_ADDRESSES
          value: rabbitmq
        - name: RABBIT_PASSWORD
          value: guest
        - name: RABBIT_USER
          value: guest
        - name: STORAGE_TYPE
          value: mysql
        image: openzipkin/zipkin
        name: zipkin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
        readinessProbe:
          tcpSocket:
            port: 9411
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9411
          initialDelaySeconds: 120
          periodSeconds: 15
