k8/ingress-pks.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName:  ingress-nginx-ingress-controller
    servicePort: 80
  rules:
  - host: authservice.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: authservice
          servicePort: 9000
  - host: accountservice.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: accountservice
          servicePort: 9001
  - host: contactservice.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: contactservice
          servicePort: 9002
  - host: opportunityservice.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: opportunityservice
          servicePort: 9003
  - host: gatewayservice.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: gatewayservice
          servicePort: 9012
  - host: sfdcwebapp.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: sfdcwebapp
          servicePort: 9090
  - host: hystrixdashboard.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: hystrixdashboard
          servicePort: 7979
  - host: discovery.pks.pcfdemo.pcfapps.org
    http:
      paths:
      - path: /
        backend:
          serviceName: discovery
          servicePort: 8761
