k8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: authservice.minikube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: authservice
          servicePort: 9000
  - host: accountservice.minikube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: accountservice
          servicePort: 9001
  - host: contactservice.minikube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: contactservice
          servicePort: 9002
  - host: opportunityservice.minikube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: opportunityservice
          servicePort: 9003
  - host: gatewayservice.minikube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gatewayservice
          servicePort: 9012
  - host: sfdcwebapp.minikube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sfdcwebapp
          servicePort: 9090
